<resources>
    <string name="app_name">Homework2</string>
    <string name="login_title">欢迎登录</string>
    <string name="login_description">请登录您的账户</string>
    <string name="login_email">请输入邮箱</string>
    <string name="login_password">请输入密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_btn">登录</string>
    <string name="login_wechat_btn">微信登录</string>
    <string name="login_apple_btn">Apple登录</string>
    <string name="login_no_account">还没有账户？</string>
    <string name="login_signup">立即注册</string>
    <string name="divider_or">或者</string>
    <string name="user_name">用户名</string>
    <string name="user_signature">用户签名</string>
    <string name="user_info">个人信息</string>
    <string name="user_favorite">我的收藏</string>
    <string name="user_history">浏览历史</string>
    <string name="user_setting">设置</string>
    <string name="user_about">关于我们</string>
    <string name="user_feedback">意见反馈</string>
</resources>