<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login_description"
        android:textSize="20sp"
        android:textColor="#606060"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />
    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        android:hint="@string/login_email"
        android:textSize="20sp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_description"
        app:backgroundTint="@null"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/login_password"
        android:textSize="20sp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="7dp"
        android:drawableEnd="@drawable/ic_eye_close"
        android:paddingLeft="13dp"
        android:paddingRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:backgroundTint="@null"/>
    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_forget_password"
        android:textSize="15sp"
        android:textColor="#4169E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="0dp"
        android:background="@drawable/button_background"
        android:text="@string/login_btn"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forget_password"
        app:backgroundTint="@null" />
    <include
        android:id="@+id/divider_or"
        layout="@layout/divider_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />
    <Button
        android:id="@+id/login_wechat_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_background_wechat"
        android:text="@string/login_wechat_btn"
        android:textSize="18sp"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_wechat"
        android:drawablePadding="5px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_apple_btn"
        app:layout_constraintTop_toBottomOf="@+id/divider_or"
        app:backgroundTint="@null"/>
    <Button
        android:id="@+id/login_apple_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/button_background_apple"
        android:text="@string/login_apple_btn"
        android:textSize="18sp"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_apple"
        android:drawablePadding="0px"
        app:layout_constraintStart_toEndOf="@id/login_wechat_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_or"
        app:backgroundTint="@null"/>
    <LinearLayout
        android:id="@+id/login_signup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_apple_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account"
            android:textSize="16sp"
            android:textColor="#606060" />
        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:textSize="16sp"
            android:textColor="#4169E1"
            android:layout_marginStart="5dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>