<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        layout="@layout/user_info_header"
        android:id="@+id/user_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/user_info"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:text="@string/user_info"
        android:textSize="20sp"
        android:background="@drawable/text_background"
        android:drawablePadding="10dp"
        app:drawableLeftCompat="@drawable/ic_user_info"
        app:drawableRightCompat="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/user_info_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/user_favorite"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_marginTop="1dp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:text="@string/user_favorite"
        android:textSize="20sp"
        android:background="@drawable/text_background"
        android:drawablePadding="10dp"
        app:drawableLeftCompat="@drawable/ic_user_favorite"
        app:drawableRightCompat="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/user_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/user_history"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_marginTop="1dp"
        android:padding="15dp"
        android:paddingStart="23dp"
        android:text="@string/user_history"
        android:textSize="20sp"
        android:background="@drawable/text_background"
        android:drawablePadding="11dp"
        app:drawableLeftCompat="@drawable/ic_user_history"
        app:drawableRightCompat="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/user_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/user_setting"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_marginTop="1dp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:text="@string/user_setting"
        android:textSize="20sp"
        android:background="@drawable/text_background"
        android:drawablePadding="10dp"
        app:drawableLeftCompat="@drawable/ic_user_setting"
        app:drawableRightCompat="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/user_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/user_about"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_marginTop="1dp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:text="@string/user_about"
        android:textSize="20sp"
        android:background="@drawable/text_background"
        android:drawablePadding="10dp"
        app:drawableLeftCompat="@drawable/ic_user_about"
        app:drawableRightCompat="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/user_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/user_feedback"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_marginTop="1dp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:text="@string/user_feedback"
        android:textSize="20sp"
        android:background="@drawable/text_background"
        android:drawablePadding="10dp"
        app:drawableLeftCompat="@drawable/ic_user_feedback"
        app:drawableRightCompat="@drawable/ic_right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/user_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>